--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,60 +5,56 @@
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
                                                    tools:context=".MainActivity">
-
-    <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="140dp"
-            android:layout_marginTop="185dp"
-            android:layout_marginEnd="143dp"
-            android:layout_marginBottom="418dp"
-            android:contentDescription="@string/img_desc"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@mipmap/profile_test2"
-            tools:srcCompat="@tools:sample/avatars"/>
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:hint="@string/name_input"
-            android:ems="10"
-            android:id="@+id/name_input"
-            android:autofillHints="" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="99dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="99dp" app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="465dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="221dp"/>
     <Button
-            android:id="@+id/greet_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="onClick"
-            android:text="@string/greet_button_text"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="146dp"
-            android:layout_marginEnd="146dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="533dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="150dp"/>
+            android:text="Quit"
+            android:onClick="onExitButtonPressed"
+            android:background="@color/red"
+            android:textColor="@color/white"
+            android:layout_width="58dp"
+            android:layout_height="40dp" android:id="@+id/quit_btn"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="88dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="603dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="337dp" android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
     <TextView
-            android:text="@string/greet_text"
-            android:textSize="26dp"
+            android:text="0"
+            android:textSize="26sp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="179dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="174dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="367dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="346dp"/>
-    <TextView
-            android:textSize="26dp"
+            android:layout_height="wrap_content" android:id="@+id/counterText"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="165dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="547dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="176dp" android:layout_marginEnd="176dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    <Button
+            android:text="Start"
+            android:onClick="onStartButtonPressed"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/greet_text"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="91dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="92dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="396dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="300dp"/>
-
+            android:layout_height="wrap_content" android:id="@+id/start_btn"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="288dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="395dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="38dp" android:layout_marginEnd="285dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    <Button
+            android:text="Reset"
+            android:onClick="onResetButtonPressed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/reset_btn"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="288dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="395dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="279dp" android:layout_marginEnd="44dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    <Button
+            android:text="Stop"
+            android:onClick="onStopButtonPressed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/stop_btn"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="288dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="395dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="161dp" android:layout_marginEnd="162dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
