--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,59 +6,37 @@
                                                    android:layout_height="match_parent"
                                                    tools:context=".MainActivity">
 
-    <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="140dp"
-            android:layout_marginTop="185dp"
-            android:layout_marginEnd="143dp"
-            android:layout_marginBottom="418dp"
-            android:contentDescription="@string/img_desc"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@mipmap/profile_test2"
-            tools:srcCompat="@tools:sample/avatars"/>
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:hint="@string/name_input"
-            android:ems="10"
-            android:id="@+id/name_input"
-            android:autofillHints="" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="99dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="99dp" app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="465dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="221dp"/>
+    <!-- display two Button's and a FrameLayout to replace the Fragment's  -->
+
     <Button
-            android:id="@+id/greet_button"
-            android:layout_width="wrap_content"
+            android:id="@+id/firstFragment"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="onClick"
-            android:text="@string/greet_button_text"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="146dp"
-            android:layout_marginEnd="146dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="533dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="150dp"/>
-    <TextView
-            android:text="@string/greet_text"
-            android:textSize="26dp"
-            android:layout_width="wrap_content"
+            android:background="@color/button_background_color"
+            android:text="First Fragment"
+            android:textColor="@color/white"
+            android:textSize="20sp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="108dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="575dp" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    <Button
+            android:id="@+id/secondFragment"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="179dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="174dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="367dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="346dp"/>
-    <TextView
-            android:textSize="26dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/greet_text"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="91dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="92dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="396dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="300dp"/>
+            android:background="@color/button_background_color"
+            android:text="Second Fragment"
+            android:textColor="@color/white"
+            android:textSize="20sp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="156dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="527dp" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    <FrameLayout
+            android:id="@+id/frameLayout"
+            android:layout_width="411dp"
+            android:layout_height="530dp"
+            android:layout_marginTop="205dp" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
